--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   <body>
     <div class="section1">
       <h1 class="titresection1">
-        Awesome <span class="HTML5">HTML5</span> Template TINKER
+        <span class="tinker_section1">TINKER</span>
+        <span class="HTML5">HTML5</span> Template
       </h1>
       <p class="psection1">
         Tinker is a responsive CSS template provided by templatemo site. This
@@ -55,7 +56,3 @@
 
   <footer></footer>
 </html>
-
-
-
-
