--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
       <button href="#" class="bouton">LES'S START</button>
     </div>
 
+    <div class="section2">
+
+
+    </div>
+
 
     <div>
       <iframe
