commit du 9mars 2023

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     />
 
     <link rel="stylesheet" href="inc/css/header.css" />
-    <link rel="stylesheet" href="inc/css/style.css" />
+    <link rel="stylesheet" href="inc/css/style_principal.css" />
+    <link rel="stylesheet" href="inc/css/style_section1.css" />
+    <link rel="stylesheet" href="inc/css/style_section2.css" />
     <link rel="stylesheet" href="inc/css/footer.css" />
     <title>TINKER</title>
     <script src="inc/ts/navbar_scroll.ts"></script>
   </head>
+
+  <!-- Header -->
 
   <body>
     <header>
@@ -39,6 +43,8 @@
       </section>
     </header>
 
+    <!-- Première section -->
+
     <div class="section1">
       <h2 class="titresection1">
         <span class="tinker_section1">TINKER</span>
@@ -53,11 +59,32 @@
       <button href="#" class="bouton">LES'S START</button>
     </div>
 
+    <!-- Deuxième section -->
+
+    <!-- Groupe 1 -->
+
     <div class="section2">
-
-
+      <div class="groupe1">
+        <div class="icon">
+          <img src="inc/img/service_icon_01.png" alt="" />
+        </div>
+          <h4>Smart Notifications</h4>
+          <div class="line">
+          </div>
+          <div class="p_section2"><p>
+          Curabitur non risus fringilla libero accumsan molestie et quis justo.
+          Cras aliquam tempor sem, vestibulum facilisis dui. Mauris malesuada
+          porta.
+        </p></div>
+        <button href="#" class="bouton_section2">CONTINUE READING</button>
     </div>
+    <!-- Groupe 2 -->
 
+    <!-- Groupe 3 -->
+
+    <!-- Groupe 4 -->
+
+    <!-- Troisième section -->
 
     <div>
       <iframe
@@ -66,11 +93,6 @@
       ></iframe>
     </div>
 
-
     <footer></footer>
-
-
-
-
   </body>
 </html>
