--- a/index.html
+++ b/index.html
@@ -1,98 +1,192 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="inc/css/header.css" />
-    <link rel="stylesheet" href="inc/css/style_principal.css" />
-    <link rel="stylesheet" href="inc/css/style_section1.css" />
-    <link rel="stylesheet" href="inc/css/style_section2.css" />
-    <link rel="stylesheet" href="inc/css/footer.css" />
-    <title>TINKER</title>
-    <script src="inc/ts/navbar_scroll.ts"></script>
-  </head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet" />
 
-  <!-- Header -->
+  <link rel="stylesheet" href="inc/css/header.css" />
+  <link rel="stylesheet" href="inc/css/style_principal.css" />
+  <link rel="stylesheet" href="inc/css/style_section1.css" />
+  <link rel="stylesheet" href="inc/css/style_section2.css" />
+  <link rel="stylesheet" href="inc/css/style_section4.css" />
+  <link rel="stylesheet" href="inc/css/footer.css" />
+  <title>TINKER</title>
+  <script src="inc/ts/navbar_scroll.ts"></script>
+</head>
 
-  <body>
-    <header>
-      <section class="top-nav">
-        <div class="tinker">TINKER</div>
-        <input id="menu-toggle" type="checkbox" />
-        <label class="menu-button-container" for="menu-toggle">
-          <div class="menu-button"></div>
-        </label>
-        <ul class="menu">
-          <li>HOME</li>
-          <li>ABOUT US</li>
-          <li>PORTFOLIO</li>
-          <li>BLOG</li>
-          <li>CONTACT US</li>
-        </ul>
-      </section>
-    </header>
+<!-- Header -->
 
-    <!-- Première section -->
+<body>
+  <header>
+    <section class="top-nav">
+      <div class="tinker">TINKER</div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class="menu-button-container" for="menu-toggle">
+        <div class="menu-button"></div>
+      </label>
+      <ul class="menu">
+        <li>HOME</li>
+        <li>ABOUT US</li>
+        <li>PORTFOLIO</li>
+        <li>BLOG</li>
+        <li>CONTACT US</li>
+      </ul>
+    </section>
+  </header>
 
-    <div class="section1">
-      <h2 class="titresection1">
-        <span class="tinker_section1">TINKER</span>
-        <span class="HTML5">HTML5</span>
-        <span class="template">Template</span>
-      </h2>
-      <p class="psection1">
-        Tinker is a responsive CSS template provided by templatemo site. This
-        design can be applied for any kind of website. Please mention our site
-        to your colleagues. Thank you.
-      </p>
-      <button href="#" class="bouton">LES'S START</button>
-    </div>
+  <!-- Première section -->
 
-    <!-- Deuxième section -->
+  <div class="section1">
+    <h2 class="titresection1">
+      <span class="tinker_section1">TINKER</span>
+      <span class="HTML5">HTML5</span>
+      <span class="template">Template</span>
+    </h2>
+    <p class="psection1">
+      Tinker is a responsive CSS template provided by templatemo site. This
+      design can be applied for any kind of website. Please mention our site
+      to your colleagues. Thank you.
+    </p>
+    <button href="#" class="bouton">LES'S START</button>
+  </div>
 
-    <!-- Groupe 1 -->
+  <!-- Deuxième section -->
 
-    <div class="section2">
-      <div class="groupe1">
-        <div class="icon">
-          <img src="inc/img/service_icon_01.png" alt="" />
-        </div>
-          <h4>Smart Notifications</h4>
-          <div class="line">
-          </div>
-          <div class="p_section2"><p>
+  <!-- Groupe 1 -->
+
+  <div class="section2">
+    <div class="groupe1">
+      <div class="icon">
+        <img src="inc/img/service_icon_01.png" alt="" />
+      </div>
+      <h4>Smart Notifications</h4>
+      <div class="line">
+      </div>
+      <div class="p_section2">
+        <p>
           Curabitur non risus fringilla libero accumsan molestie et quis justo.
           Cras aliquam tempor sem, vestibulum facilisis dui. Mauris malesuada
           porta.
-        </p></div>
-        <button href="#" class="bouton_section2">CONTINUE READING</button>
+        </p>
+      </div>
+      <button href="#" class="bouton_section2">CONTINUE READING</button>
     </div>
+
     <!-- Groupe 2 -->
+
+    <div class="groupe2">
+      <div class="icon">
+        <img src="inc/img/service_icon_01.png" alt="" />
+      </div>
+      <h4>Smart Notifications</h4>
+      <div class="line">
+      </div>
+      <div class="p_section2">
+        <p>
+          Curabitur non risus fringilla libero accumsan molestie et quis justo.
+          Cras aliquam tempor sem, vestibulum facilisis dui. Mauris malesuada
+          porta.
+        </p>
+      </div>
+      <button href="#" class="bouton_section2">CONTINUE READING</button>
+    </div>
 
     <!-- Groupe 3 -->
 
-    <!-- Groupe 4 -->
-
-    <!-- Troisième section -->
-
-    <div>
-      <iframe
-        class="map"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7895.485196115994!2d103.85995441789784!3d1.2880401763270322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7fb4e58ad9cd826e!2sSingapore+Flyer!5e0!3m2!1sen!2sth!4v1505825620371"
-      ></iframe>
+    <div class="groupe2">
+      <div class="icon">
+        <img src="inc/img/service_icon_01.png" alt="" />
+      </div>
+      <h4>Smart Notifications</h4>
+      <div class="line">
+      </div>
+      <div class="p_section2">
+        <p>
+          Curabitur non risus fringilla libero accumsan molestie et quis justo.
+          Cras aliquam tempor sem, vestibulum facilisis dui. Mauris malesuada
+          porta.
+        </p>
+      </div>
+      <button href="#" class="bouton_section2">CONTINUE READING</button>
     </div>
 
-    <footer></footer>
-  </body>
+    <!-- Groupe 4 -->
+
+    <div class="groupe2">
+      <div class="icon">
+        <img src="inc/img/service_icon_01.png" alt="" />
+      </div>
+      <h4>Smart Notifications</h4>
+      <div class="line">
+      </div>
+      <div class="p_section2">
+        <p>
+          Curabitur non risus fringilla libero accumsan molestie et quis justo.
+          Cras aliquam tempor sem, vestibulum facilisis dui. Mauris malesuada
+          porta.
+        </p>
+      </div>
+      <button href="#" class="bouton_section2">CONTINUE READING</button>
+    </div>
+  </div>
+  <!-- Troisième section -->
+
+  <div class="slider">
+    <input type="radio" name="slider" id="slide1" checked>
+    <input type="radio" name="slider" id="slide2">
+    <input type="radio" name="slider" id="slide3">
+    <input type="radio" name="slider" id="slide4">
+    <div class="slides">
+      <div class="slide slide1">
+        <div class="text">
+          <h2>Zone de texte 1</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod tellus ut leo ultricies, eget sodales
+            lorem auctor.</p>
+        </div>
+      </div>
+      <div class="slide slide2">
+        <div class="text">
+          <h2>Zone de texte 2</h2>
+          <p>Maecenas in libero eget mauris suscipit egestas eu ut lectus. Pellentesque bibendum tortor vitae quam
+            venenatis.</p>
+        </div>
+      </div>
+      <div class="slide slide3">
+        <div class="text">
+          <h2>Zone de texte 3</h2>
+          <p>Nulla ac nunc et nunc ultrices pellentesque. Nunc vel semper odio. Vestibulum blandit tincidunt libero a
+            convallis.</p>
+        </div>
+      </div>
+      <div class="slide slide4">
+        <div class="text">
+          <h2>Zone de texte 4</h2>
+          <p>Proin vel elit eu elit rhoncus tincidunt ac ac magna. Sed eu dolor lobortis, consectetur sapien at,
+            pellentesque enim.</p>
+        </div>
+      </div>
+    </div>
+    <div class="navigation">
+      <label for="slide1"></label>
+      <label for="slide2"></label>
+      <label for="slide3"></label>
+      <label for="slide4"></label>
+    </div>
+  </div>
+
+  <!--  -->
+
+
+  <iframe class="map"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7895.485196115994!2d103.85995441789784!3d1.2880401763270322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7fb4e58ad9cd826e!2sSingapore+Flyer!5e0!3m2!1sen!2sth!4v1505825620371"></iframe>
+  </div>
+
+  <footer></footer>
+</body>
+
 </html>
